--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
    
-    <title>Mona Reacat Portfolio Website</title>
+    <title>Adrian Reacat Portfolio Website</title>
     <style>
       *{
         font-family: 'Roboto', sans-serif;
